--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
     def androidx_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$androidx_version"
     implementation "androidx.navigation:navigation-ui-ktx:$androidx_version"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$androidx_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$androidx_version"
     implementation "androidx.navigation:navigation-ui-ktx:$androidx_version"
 
