--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     implementation "com.google.android.gms:play-services-maps:17.0.1"
     implementation "com.google.android.gms:play-services-location:18.0.0"
 
+    // Facebook SDK
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+
     //ORM Room components
     def room_version = "2.3.0"
     implementation "androidx.room:room-runtime:$room_version"
