--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'com.google.gms.google-services'
+    id 'kotlin-kapt'
 }
 
 apply plugin: "kotlin-kapt"
@@ -41,6 +42,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    dataBinding.enabled = true
 }
 
 dependencies {
@@ -58,12 +60,18 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.firebase:firebase-firestore:23.0.1'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.1"
 
+    //ImageView
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     // Firebase
     implementation 'com.google.firebase:firebase-auth:19.2.0'
     implementation platform('com.google.firebase:firebase-bom:27.1.0')
@@ -77,6 +85,9 @@ dependencies {
 
     implementation "com.google.android.gms:play-services-maps:17.0.1"
     implementation "com.google.android.gms:play-services-location:18.0.0"
+
+    implementation 'com.google.firebase:firebase-database:19.7.0'
+   // implementation 'com.firebaseui:firebase-ui-database:2.3.0'
 
     // Facebook SDK
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
