--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,17 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$androidx_version"
     implementation "androidx.navigation:navigation-ui-ktx:$androidx_version"
 
+    //SearchBar
+    implementation 'com.github.mancj:MaterialSearchBar:0.7.1'
+
+    //Firebase bets
+    // Dependency for Firebase Realtime Database
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    // Dependency FirebaseUI for Firebase Realtime Database
+    implementation 'com.firebaseui:firebase-ui-database:7.2.0'
+
+
+
     // FirebaseUI for Cloud Firestore
     implementation 'com.firebaseui:firebase-ui-firestore:7.2.0'
 
