--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_icon_app_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FormulaWorld">
+        android:theme="@style/splashScreen">
         <activity android:name=".RegisterActivity"></activity>
         <activity android:name=".ProfileActivity" />
         <activity android:name=".SignInActivity" />
